--- a/styles.css
+++ b/styles.css
@@ -362,3 +362,20 @@ button {
   .btn:hover {
     background-color: #0056b3;
   }
+  #uploadbtn {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+
+  #uploadbtn:hover {
+    background-color: #45a049; /* Darker Green */
+  }
