--- a/styles.css
+++ b/styles.css
@@ -312,70 +312,32 @@ button {
   }
 }
   
-  form {
-    margin-top: 20px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 8px;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  input[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #0056b3;
-  }
-  
-  #container {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .btn {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .btn:hover {
-    background-color: #0056b3;
-  }
-  #uploadbtn {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 10px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-
-  #uploadbtn:hover {
-    background-color: #45a049; /* Darker Green */
-  }
+ .uploadform{
+  position: relative;
+  display:flex;
+  align-items:center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 0 10px;
+  color: white;
+  width: 490px;
+  border-radius: 8px;
+  padding: 30px;
+  text-align: center;
+  border: 1px solid #ffffff80;
+  backdrop-filter: blur(8px);
+}
+.inputbox{
+  position:relative;
+  border-bottom: 2px solid #ccc;
+  margin:15px 0;
+}
+inputbox input{
+  width:100%;
+  height:60px;
+  color: #fff;
+  background:transparent;
+  border:none;
+  outline:none;
+  font-size:16px;
+}
